--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -492,7 +492,11 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "Grid search is a method of systematically trying different models and/or hyper-parameters to achieve optimal validation score before moving on to the test set. For example when using a decision tree model, the grid search technique can to used to try different values for the maximum depth variable to find the best validation score."
+    "Grid search is a method of systematically trying different models and/or hyper-parameters to achieve optimal validation score before moving on to the test set. \n",
+    "\n",
+    "Reasonable models and hyper-parameters are selected by the engineer and can be thought of as laid out in a grid with say kernel types across the top and gamma values on the side. The algorithm then goes through each different combination and evaluates them according the a user selected evaluation function, like r^2 or f(0.5) etc.\n",
+    "\n",
+    "For example when using a decision tree model, the grid search technique can to used to try different values for the maximum depth variable to find the best validation score like R^2."
    ]
   },
   {
@@ -516,9 +520,9 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "The k-fold cross-validation training technique splits the data into k buckets then, calculates the test score on each bucket in turn, and then averages the test score over all k buckets.\n",
+    "The k-fold cross-validation training technique randomly shuffles and splits the training data into k buckets then, calculates the test score on each bucket in turn, and then averages the test score over all k buckets.\n",
     "\n",
-    "Using this technique it allows you to utilize all the data in training the model, and in the context of grid search, it prevents the overfitting that may occur when optimizing parameters on a particular test set, which can cause information about that data to 'leak' into the model. \n",
+    "When using grid search for model optimization, the data is split into training and testing data, then the training data is further split into training and validation data. This reduces the amount of data available for training and also results may be affected by the random selection of the training/validation set. Using cross validation to average over k buckets of shuffled data, the whole training set can be used for training and averaging over the buckets will reduce the effect caused by using just one random bucket.\n",
     "\n"
    ]
   },
@@ -547,7 +551,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO: Import 'make_scorer', 'DecisionTreeRegressor', and 'GridSearchCV'\n",
@@ -691,7 +697,7 @@
     "\n",
     "Recommended selling prices as above.\n",
     "\n",
-    "Relative prices seem reasonable as prices are positively correlated to number of rooms, lack of poverty and favorable student-teacher ratios."
+    "Relative prices seem reasonable as prices are positively correlated to number of rooms, lack of poverty and favorable student-teacher ratios. Prices all lay within the min and max range of the training data, with client 1's house not far from the medium price."
    ]
   },
   {
